Removed unnecessary CURLOPT_FOLLOWLOCATION

--- a/app/design/frontend/default/default/template/siftscience/jssnippet.phtml
+++ b/app/design/frontend/default/default/template/siftscience/jssnippet.phtml
@@ -1,9 +1,9 @@
 <?php
-/*
- * $this == AloAudio_SiftScience_Block_Jssnippet
-*/
-$JS_KEY = Mage::getStoreConfig('siftscience_options/general/js_snippet_key');
-$userId = $this->getUserId();
+/**
+ * @var $this AloAudio_SiftScience_Block_Jssnippet
+ */
+$JS_KEY    = Mage::getStoreConfig('siftscience_options/general/js_snippet_key');
+$userId    = $this->getUserId();
 $sessionId = $this->getSessionId();
 ?>
 
